# qwik-optimizer-next

./: AI_POSTMORTEM.md  CLAUDE.md  Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  STATE.md  (+5 more)
crates/qwik-optimizer-napi/: Cargo.toml
crates/qwik-optimizer-napi/src/: lib.rs
crates/qwik-optimizer-oxc/: Cargo.toml  fixtures.json
crates/qwik-optimizer-oxc/src/: add_side_effect.rs  clean_side_effects.rs  code_move.rs  collector.rs  const_replace.rs  dependency_analysis.rs  emit.rs  entry_strategy.rs  errors.rs  filter_exports.rs  hash.rs  inlined_fn.rs  is_const.rs  jsx_transform.rs  lib.rs  parse.rs  parser.rs  props_destructuring.rs  rename_imports.rs  source_path.rs  transform.rs  types.rs  words.rs
crates/qwik-optimizer-oxc/tests/: snapshot_tests.rs  spec_examples.rs
crates/qwik-optimizer-oxc/tests/snapshots/: snapshot_tests__snapshot_transform_tests__component_level_self_referential_qrl.snap  snapshot_tests__snapshot_transform_tests__destructure_args_colon_props.snap  snapshot_tests__snapshot_transform_tests__destructure_args_colon_props2.snap  snapshot_tests__snapshot_transform_tests__destructure_args_colon_props3.snap  snapshot_tests__snapshot_transform_tests__destructure_args_inline_cmp_block_stmt.snap  snapshot_tests__snapshot_transform_tests__destructure_args_inline_cmp_block_stmt2.snap  snapshot_tests__snapshot_transform_tests__destructure_args_inline_cmp_expr_stmt.snap  snapshot_tests__snapshot_transform_tests__example_1.snap  snapshot_tests__snapshot_transform_tests__example_10.snap  snapshot_tests__snapshot_transform_tests__example_11.snap  snapshot_tests__snapshot_transform_tests__example_2.snap  snapshot_tests__snapshot_transform_tests__example_3.snap  snapshot_tests__snapshot_transform_tests__example_4.snap  snapshot_tests__snapshot_transform_tests__example_5.snap  snapshot_tests__snapshot_transform_tests__example_6.snap  snapshot_tests__snapshot_transform_tests__example_7.snap  snapshot_tests__snapshot_transform_tests__example_8.snap  snapshot_tests__snapshot_transform_tests__example_9.snap  snapshot_tests__snapshot_transform_tests__example_build_server.snap  snapshot_tests__snapshot_transform_tests__example_capture_imports.snap  snapshot_tests__snapshot_transform_tests__example_capturing_fn_class.snap  snapshot_tests__snapshot_transform_tests__example_class_name.snap  (+179 more)
(+188 files in other folders)
