[package]
name = "qwik-optimizer-napi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["serde-json", "async"] }
napi-derive = "3"
qwik-optimizer-oxc = { path = "../qwik-optimizer-oxc" }
serde_json = "1"

[build-dependencies]
napi-build = "2"
